--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>For my Job Interview</title>
+</head>
+<body>
+    <h1>This the exercise for my final launch!</h1>
+    
+</body>
+</html>
