--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For my Job Interview</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.min.css">
 </head>
 <body>
     <h1>This the exercise for my final launch!</h1>
-    
+    <button type="button" class="btn btn-primary">Primary</button>
 </body>
 </html>
